do goxc step when cirleci specified

--- a/circle.yml
+++ b/circle.yml
@@ -48,7 +48,7 @@ notify:
     - url: https://webhooks.gitter.im/e/bf9c8f0282b914859ce2
 deployment:
   goxc:
-    branch: master
+    branch: [master, /*circleci*/]
     commands:
       - make release
       - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
