--- a/circle.yml
+++ b/circle.yml
@@ -51,7 +51,8 @@ deployment:
     branch: [master, feature/circleci]
     commands:
       - make release
-      - goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
+      # goxc broken in GO15VENDOREXPERIMENT
+      #- goxc -tasks='xc archive' -bc 'linux' -build-ldflags="-extldflags '-static' -X github.com/wellington/wellington/version.Version $WT_VERSION" -pv $WT_VERSION -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
       # build docker container
       - make build
   hub:
