--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,14 +38,13 @@ install:
   - dir C:\mingw64\bin
   #retrieve go 1.5
   - ps: |
-      $file = "go1.5beta1.windows-amd64.zip"
+      $file = "go1.5.1.windows-amd64.zip"
       $url  = "https://storage.googleapis.com/golang/"
       $url += $file
       Invoke-WebRequest -UserAgent wget -Uri $url -OutFile go1.5beta1.windows-amd64.zip
-      &7z x -oC:\go15 go1.5beta1.windows-amd64.zip > $null
+      &7z x -oC:\go15 go1.5.1.windows-amd64.zip > $null
   - dir C:\go15
   - go version
-  - go get github.com/laher/goxc
 
 build_script:
   - mingw32-make windows
