--- a/circle.yml
+++ b/circle.yml
@@ -56,6 +56,7 @@ deployment:
       # build docker container
   container:
     branch: master
+    commands:
       - make build
   hub:
     branch: master
