shitty way to make appveyor work with submodules
http://help.appveyor.com/discussions/questions/374-deployment-keys-support

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,11 @@ install:
   #- choco install -y mingw
   #- set PATH=C:\tools\mingw64\bin;C:\gopath\bin;%PATH%
 
-
+  - ps: $key = $env:priv_key #just the key contents, copied from notepad, into the environment variable on the UI
+  - ps: $fileContent = "-----BEGIN RSA PRIVATE KEY-----" + "`n"
+  - ps: for ($i = 0; $i -lt $key.Length / 64; $i++) { $min = [math]::min(64, $key.Length - ($i * 64)); $fileContent += $key.substring($i*64, $min) + "`n"; }
+  - ps: $fileContent += "-----END RSA PRIVATE KEY-----" + "`n"
+  - ps: Set-Content c:\users\appveyor\.ssh\id_rsa $fileContent
   - ps: |
       # Install MinGW.
       $url  = "http://sourceforge.net/projects/mingw-w64/files/"
