--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,10 @@ jobs:
       - checkout
       - run: |
           make release
-          mv snapshot/* $CIRCLE_ARTIFACTS
           docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
           docker push drewwells/wellington
+      - store_artifacts:
+          path: snapshot/
   "go-111":
     docker:
       # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
