.circleci: do not check out in GOPATH

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
     docker:
       # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
       - image: circleci/golang:1.11
-    working_directory: /go/src/github.com/wellington/wellington
+    # working_directory: /go/src/github.com/wellington/wellington
     #environment:
     #  TEST_RESULTS: /tmp/test-results
     steps:
