--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,17 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - go-111
+      - go
       - deploy:
           requires:
-            - go-111
+            - go
           filters:
             branches:
               only: master
 jobs:
   deploy:
     docker:
-      - image: circleci/golang:1.11
+      - image: circleci/golang:1.15.1
     working_directory: /go/src/github.com/wellington/wellington
     steps:
       - checkout
@@ -23,10 +23,10 @@ jobs:
           docker push drewwells/wellington
       - store_artifacts:
           path: snapshot/
-  "go-111":
+  "go":
     docker:
       # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
-      - image: circleci/golang:1.11
+      - image: circleci/golang:1.15.1
     environment:
       GO111MODULE: "on"
     # working_directory: /go/src/github.com/wellington/wellington
@@ -36,10 +36,10 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v111-pkg-cache
+            - pkg-cache
       - run: make test
       - save_cache:
-          key: v111-pkg-cache
+          key: pkg-cache
           paths:
             - "/go/pkg"
   "go-114":
